--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,66 +1,60 @@
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: hidden; }
 
-.first-mov {
-  width: 100%;
-  height: 1000px;
-  background-color: #FFFFFF;
-  text-align: center;
-  display: table;
-  position: relative;
-  cursor: default; }
-
-.lets-start {
+.display-table, .abstract, .lets-start {
   display: table-cell;
-  vertical-align: middle;
-  font-family: helvetica;
-  font-size: 10em;
-  color: #000;
-  letter-spacing: 0px; }
+  vertical-align: middle; }
 
-.second-mov, .second-mov:hover {
+.display-inline, #logo, #example {
+  display: inline-block;
+  vertical-align: middle; }
+
+.abstract {
+  font-family: arial;
+  font-size: 60px;
+  color: #000;
+  letter-spacing: 0px;
+  padding: 120px; }
+
+.first-mov, .second-mov, .fourth-mov {
   width: 100%;
   height: 1000px;
-  background-color: #FF0000;
+  background-color: #FFF;
   text-align: center;
   display: table;
   position: relative;
   cursor: default; }
 
-#logo {
-  vertical-align: middle;
-  width: 800px;
-  height: 800px; }
-
-.third-mov {
+.third-mov, .fifth-mov, .sixth-mov {
   width: 100%;
   height: 1000px;
-  background-color: #FF6600;
+  background-color: #FFF;
   text-align: justify;
   display: table;
   position: relative;
   cursor: default; }
 
-.abstract {
-  display: table-cell;
-  vertical-align: middle;
-  padding: 120px;
-  font-family: arial;
-  font-size: 60px;
-  color: #FFF;
+.lets-start {
+  font-family: helvetica;
+  font-size: 10em;
+  color: #000;
   letter-spacing: 0px; }
 
-.fourth-mov {
-  width: 100%;
-  height: 1000px;
-  background-color: #FFBB00;
-  text-align: center;
-  display: table;
-  position: relative;
-  cursor: default; }
+#logo {
+  width: 400px;
+  height: 470px;
+  margin-top: 200px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px; }
 
 #example {
-  vertical-align: middle;
   width: 900px;
-  height: 700px; }
+  height: 700px;
+  margin-top: 130px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px; }
