--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
   overflow-x: hidden;
   overflow-y: hidden; }
 
-.display-table, .abstract, .lets-start {
+.display-table, .abstract, .lets-start, .presentation, .login-form, #start, #present {
   display: table-cell;
   vertical-align: middle; }
 
@@ -12,16 +12,24 @@ body {
   display: inline-block;
   vertical-align: middle; }
 
+.button-design, #start, #present {
+  border: 5px solid white !important;
+  border-radius: 100% 100% 100% 100% !important;
+  background-color: #FF0000 !important;
+  color: #FFF !important;
+  text-transform: uppercase;
+  cursor: pointer; }
+
 .abstract {
   font-family: arial;
-  font-size: 60px;
+  font-size: 45px;
   color: #000;
   letter-spacing: 0px;
   padding: 120px; }
 
-.first-mov, .second-mov, .fourth-mov {
+.intro, .starting, .first-mov, .second-mov, .fourth-mov, .login-form {
   width: 100%;
-  height: 1000px;
+  height: 100vh;
   background-color: #FFF;
   text-align: center;
   display: table;
@@ -30,31 +38,106 @@ body {
 
 .third-mov, .fifth-mov, .sixth-mov {
   width: 100%;
-  height: 1000px;
+  height: 100vh;
   background-color: #FFF;
   text-align: justify;
   display: table;
   position: relative;
   cursor: default; }
 
-.lets-start {
+.lets-start, .presentation, .login-form {
   font-family: helvetica;
   font-size: 10em;
   color: #000;
   letter-spacing: 0px; }
 
-#logo {
+.presentation {
+  margin-top: 0%;
+  margin-left: 0%;
+  margin-right: 10vh;
+  margin-bottom: 0vh;
+  position: absolute;
+  right: 0;
+  bottom: 0; }
+
+.hidden {
+  display: none; }
+
+.arrow-right-down {
+  margin-top: 30vh;
+  margin-left: 40vh;
+  margin-right: 0%;
+  margin-bottom: 0%;
+  position: absolute;
+  left: 0;
+  top: 0; }
+
+.arrow-left-down {
+  margin-top: 10vh;
+  margin-left: 0%;
+  margin-right: 40vh;
+  margin-bottom: 0%;
+  position: absolute;
+  right: 0;
+  top: 0; }
+
+.arrow-right {
+  margin-top: 0%;
+  margin-left: 40vh;
+  margin-right: 0%;
+  margin-bottom: 5vh;
+  position: absolute;
+  left: 0;
+  bottom: 0; }
+
+.arrow-left {
+  margin-top: 0%;
+  margin-left: 0%;
+  margin-right: 40vh;
+  margin-bottom: 30vh;
+  position: absolute;
+  right: 0;
+  bottom: 0; }
+
+.key-word {
+  font-family: arial;
+  font-size: 30px;
+  color: #000;
+  letter-spacing: 1px; }
+
+#start {
+  font-family: arial;
+  font-size: 20px;
+  color: #000;
+  letter-spacing: 1px;
   width: 400px;
-  height: 470px;
-  margin-top: 200px;
+  height: 400px; }
+
+#present {
+  font-family: arial;
+  font-size: 18px;
+  color: #000;
+  letter-spacing: 1px;
+  width: 200px;
+  height: 80px; }
+
+#start:hover, #present:hover {
+  border: 5px solid black !important;
+  background-color: #FFF !important;
+  color: #000 !important; }
+
+#logo {
+  width: 500px;
+  height: 600px;
+  margin-top: 10vh;
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px; }
 
 #example {
-  width: 900px;
-  height: 700px;
-  margin-top: 130px;
+  width: 700px;
+  height: 500px;
+  margin-top: 10vh;
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px; }
