--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
   overflow-x: hidden;
   overflow-y: hidden; }
 
-.display-table, .abstract, .lets-start, .presentation, .login-form, #start, #present {
+.display-table, .abstract, .lets-start, .starting, .appear, #start, #present {
   display: table-cell;
   vertical-align: middle; }
 
@@ -27,6 +27,9 @@ body {
   letter-spacing: 0px;
   padding: 120px; }
 
+.background {
+  background-image: url("../../public/images/auth.png"); }
+
 .intro, .starting, .first-mov, .second-mov, .fourth-mov, .login-form {
   width: 100%;
   height: 100vh;
@@ -45,65 +48,28 @@ body {
   position: relative;
   cursor: default; }
 
-.lets-start, .presentation, .login-form {
+.lets-start, .starting {
   font-family: helvetica;
   font-size: 10em;
   color: #000;
   letter-spacing: 0px; }
 
-.presentation {
-  margin-top: 0%;
-  margin-left: 0%;
-  margin-right: 10vh;
-  margin-bottom: 0vh;
-  position: absolute;
-  right: 0;
-  bottom: 0; }
-
 .hidden {
   display: none; }
 
-.arrow-right-down {
-  margin-top: 30vh;
-  margin-left: 40vh;
-  margin-right: 0%;
-  margin-bottom: 0%;
-  position: absolute;
-  left: 0;
-  top: 0; }
-
-.arrow-left-down {
-  margin-top: 10vh;
-  margin-left: 0%;
-  margin-right: 40vh;
-  margin-bottom: 0%;
-  position: absolute;
-  right: 0;
-  top: 0; }
-
-.arrow-right {
-  margin-top: 0%;
-  margin-left: 40vh;
-  margin-right: 0%;
-  margin-bottom: 5vh;
-  position: absolute;
-  left: 0;
-  bottom: 0; }
-
-.arrow-left {
-  margin-top: 0%;
-  margin-left: 0%;
-  margin-right: 40vh;
-  margin-bottom: 30vh;
-  position: absolute;
-  right: 0;
-  bottom: 0; }
-
 .key-word {
+  text-transform: uppercase;
   font-family: arial;
-  font-size: 30px;
+  font-size: 45px;
   color: #000;
   letter-spacing: 1px; }
+
+.form-position {
+  text-transform: uppercase;
+  margin-top: 2vh;
+  margin-left: 0vh;
+  margin-right: 0vh;
+  margin-bottom: 0vh; }
 
 #start {
   font-family: arial;
@@ -141,3 +107,18 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px; }
+
+#username, #password {
+  width: 450px;
+  height: 45px; }
+
+#login_text {
+  font-family: arial;
+  font-size: 38px;
+  color: #000;
+  letter-spacing: 1px; }
+
+#login_submit {
+  cursor: pointer;
+  width: 250px;
+  height: 40px; }
