--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -63,17 +63,17 @@ body{
   background-image: url("../../public/images/auth.png");
 }
 
-.intro, .starting ,.first-mov, .second-mov, .fourth-mov, .login-form{
+.intro, .starting ,.first-mov, .second-mov, .fourth-mov, .login-form, .after-auth{
   @include size-pattern(100%, 100vh, #FFF, center);
   //@extend .background;
 }
 
-.third-mov, .fifth-mov, .sixth-mov{
+.third-mov, .fifth-mov, .sixth-mov, .access-key{
   @include size-pattern(100%, 100vh, #FFF, justify);
   //@extend .background;
 }
 
-.lets-start, .starting{
+.lets-start, .information{
   @extend .display-table;
   @include font-pattern(helvetica, 10em, #000, 0px);
 }
@@ -85,6 +85,10 @@ body{
 .key-word{
   text-transform: uppercase;
   @include font-pattern(arial, 45px, #000, 1px);
+}
+
+.size-text-space{
+  height: 150px;
 }
 
 .appear{
@@ -108,6 +112,7 @@ body{
   @extend .button-design;
   @include font-pattern(arial, 18px, #000, 1px);
   @include size(200px, 80px);
+  border-radius: none;
   
 }
 
@@ -117,8 +122,11 @@ body{
   color: #000 !important;
 }
 
+.logo-align{
+  @extend .display-table;
+}
+
 #logo{
-  @extend .display-inline;
   @include size(500px, 600px);
   @include margin(10vh, 0px, 0px, 0px);
 }
@@ -131,6 +139,10 @@ body{
 
 #username, #password{
   @include size(450px, 45px);
+}
+
+#user_logged{
+  @include font-pattern(arial, 25px, #000, 1px);
 }
 
 #login_text{
