--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,18 @@ body {
   overflow-x: hidden;
   overflow-y: hidden; }
 
-.display-table, .abstract, .lets-start, .information, .appear, #start, #present, .logo-align {
+.background, .intro, .starting, .first-mov, .second-mov, .fourth-mov, .login-form, .after-auth, .third-mov, .fifth-mov, .sixth-mov, .access-key {
+  background-image: url("../../public/images/auth.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.display-table, .abstract, .lets-start, .information, .appear, #start, .logo-align {
   display: table-cell;
   vertical-align: middle; }
 
-.display-inline, #example {
-  display: inline-block;
-  vertical-align: middle; }
-
 .button-design, #start, #present {
-  border: 5px solid white !important;
-  border-radius: 100% 100% 100% 100% !important;
+  border: 2px solid white !important;
+  border-radius: 5px !important;
   background-color: #FF0000 !important;
   color: #FFF !important;
   text-transform: uppercase;
@@ -26,9 +27,6 @@ body {
   color: #000;
   letter-spacing: 0px;
   padding: 120px; }
-
-.background {
-  background-image: url("../../public/images/auth.png"); }
 
 .intro, .starting, .first-mov, .second-mov, .fourth-mov, .login-form, .after-auth {
   width: 100%;
@@ -80,7 +78,7 @@ body {
   color: #000;
   letter-spacing: 1px;
   width: 400px;
-  height: 400px; }
+  height: 80px; }
 
 #present {
   font-family: arial;
@@ -88,29 +86,21 @@ body {
   color: #000;
   letter-spacing: 1px;
   width: 200px;
-  height: 80px;
+  height: 50px;
   border-radius: none; }
 
 #start:hover, #present:hover {
-  border: 5px solid black !important;
+  border: 2px solid black !important;
   background-color: #FFF !important;
   color: #000 !important; }
 
 #logo {
   width: 500px;
-  height: 600px;
-  margin-top: 10vh;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px; }
+  height: 600px; }
 
 #example {
   width: 700px;
-  height: 500px;
-  margin-top: 10vh;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px; }
+  height: 500px; }
 
 #username, #password {
   width: 450px;
