--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,13 @@ body {
   overflow-x: hidden;
   overflow-y: hidden; }
 
-.background, .intro, .starting, .first-mov, .second-mov, .fourth-mov, .login-form, .after-auth, .third-mov, .fifth-mov, .sixth-mov, .access-key {
+.background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth, .fifth-mov, .sixth-mov, .access-key {
   background-image: url("../../public/images/auth.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
+
+.strtoupper, .button-design, #start, #present, .abstract, .key-word, .form-position {
+  text-transform: uppercase; }
 
 .display-table, .abstract, .lets-start, .information, .appear, #start, .logo-align {
   display: table-cell;
@@ -16,9 +19,8 @@ body {
 .button-design, #start, #present {
   border: 2px solid white !important;
   border-radius: 5px !important;
-  background-color: #FF0000 !important;
+  background-color: #000 !important;
   color: #FFF !important;
-  text-transform: uppercase;
   cursor: pointer; }
 
 .abstract {
@@ -28,7 +30,7 @@ body {
   letter-spacing: 0px;
   padding: 120px; }
 
-.intro, .starting, .first-mov, .second-mov, .fourth-mov, .login-form, .after-auth {
+.intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -37,7 +39,7 @@ body {
   position: relative;
   cursor: default; }
 
-.third-mov, .fifth-mov, .sixth-mov, .access-key {
+.fifth-mov, .sixth-mov, .access-key {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -48,7 +50,7 @@ body {
 
 .lets-start, .information {
   font-family: helvetica;
-  font-size: 10em;
+  font-size: 7em;
   color: #000;
   letter-spacing: 0px; }
 
@@ -56,7 +58,6 @@ body {
   display: none; }
 
 .key-word {
-  text-transform: uppercase;
   font-family: arial;
   font-size: 45px;
   color: #000;
@@ -66,7 +67,6 @@ body {
   height: 150px; }
 
 .form-position {
-  text-transform: uppercase;
   margin-top: 2vh;
   margin-left: 0vh;
   margin-right: 0vh;
@@ -86,8 +86,7 @@ body {
   color: #000;
   letter-spacing: 1px;
   width: 200px;
-  height: 50px;
-  border-radius: none; }
+  height: 50px; }
 
 #start:hover, #present:hover {
   border: 2px solid black !important;
@@ -99,8 +98,8 @@ body {
   height: 600px; }
 
 #example {
-  width: 700px;
-  height: 500px; }
+  width: 800px;
+  height: 600px; }
 
 #username, #password {
   width: 450px;
