--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -40,39 +40,44 @@ body{
   background-size: cover;
 }
 
+.strtoupper{
+  text-transform: uppercase;
+}
+
 .display-table{
   display: table-cell;
   vertical-align: middle;
 }
 
 .button-design{
+  @extend .strtoupper;
   border: 2px solid white !important;
   border-radius: 5px !important;
-  background-color: #FF0000 !important; 
+  background-color: #000 !important; 
   color: #FFF !important;
-  text-transform: uppercase;
   cursor: pointer;
 }
 
 .abstract{
   @extend .display-table;
+  @extend .strtoupper;
   @include font-pattern(arial, 45px, #000, 0px);
   padding: 120px;
 }
 
-.intro, .starting , .first-mov, .second-mov, .fourth-mov, .login-form, .after-auth{
+.intro, .starting , .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth{
   @include size-pattern(100%, 100vh, #FFF, center);
   @extend .background;
 }
 
-.third-mov, .fifth-mov, .sixth-mov, .access-key{
+.fifth-mov, .sixth-mov, .access-key{
   @include size-pattern(100%, 100vh, #FFF, justify);
   @extend .background;
 }
 
 .lets-start, .information{
   @extend .display-table;
-  @include font-pattern(helvetica, 10em, #000, 0px);
+  @include font-pattern(helvetica, 7em, #000, 0px);
 }
 
 .hidden{
@@ -80,7 +85,7 @@ body{
 }
 
 .key-word{
-  text-transform: uppercase;
+  @extend .strtoupper;
   @include font-pattern(arial, 45px, #000, 1px);
 }
 
@@ -93,7 +98,7 @@ body{
 }
 
 .form-position{
-  text-transform: uppercase;
+  @extend .strtoupper;
   @include margin(2vh, 0vh, 0vh, 0vh);
 }
 
@@ -107,9 +112,7 @@ body{
 #present{
   @extend .button-design;
   @include font-pattern(arial, 18px, #000, 1px);
-  @include size(200px, 50px);
-  border-radius: none;
-  
+  @include size(200px, 50px);  
 }
 
 #start:hover, #present:hover{
@@ -127,7 +130,7 @@ body{
 }
 
 #example{
-  @include size(700px, 500px);
+  @include size(800px, 600px);
 }
 
 #username, #password{
