--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,18 @@ body {
   overflow-x: hidden;
   overflow-y: hidden; }
 
-.background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth, .fifth-mov, .sixth-mov, .access-key {
+.background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth, .fifth-mov, .sixth-mov, .access-key, .ticket-grant {
   background-image: url("../../public/images/auth.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
 
-.strtoupper, .button-design, #start, #present, .abstract, .key-word, .form-position {
+.strtoupper, .button-design, #start, #how_works, #present, .abstract, .key-word, .form-position, .encrypt-system {
   text-transform: uppercase; }
 
-.pointer, .button-design, #start, #present, #login_submit {
+.pointer, .button-design, #start, #how_works, #present, #login_submit {
   cursor: pointer; }
 
-.display-table, .abstract, .lets-start, .information, .appear, .logo-align, #start {
+.display-table, .abstract, .lets-start, .information, .appear, .logo-align, .encrypt-system, #start, #how_works {
   display: table-cell;
   vertical-align: middle; }
 
@@ -25,7 +25,7 @@ body {
 .size-text-space {
   height: 150px; }
 
-.button-design, #start, #present {
+.button-design, #start, #how_works, #present {
   border: 2px solid white !important;
   background-color: #000 !important;
   color: #FFF !important;
@@ -47,7 +47,7 @@ body {
   position: relative;
   cursor: default; }
 
-.fifth-mov, .sixth-mov, .access-key {
+.fifth-mov, .sixth-mov, .access-key, .ticket-grant {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -74,7 +74,19 @@ body {
   margin-right: 0vh;
   margin-bottom: 0vh; }
 
-#start {
+.encrypt-system {
+  font-family: arial;
+  font-size: 35px;
+  color: #000;
+  letter-spacing: 0px; }
+
+.grant-service {
+  margin-top: 5%;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px; }
+
+#start, #how_works {
   font-family: arial;
   font-size: 20px;
   color: #000;
@@ -90,7 +102,11 @@ body {
   width: 200px;
   height: 50px; }
 
-#start:hover, #present:hover {
+#how_works {
+  width: 400px;
+  height: 60px; }
+
+#start:hover, #how_works:hover, #present:hover, #how_works:hover {
   border: 2px solid black !important;
   background-color: #FFF !important;
   color: #000 !important; }
