--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,19 @@ body {
   overflow-x: hidden;
   overflow-y: hidden; }
 
-.background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth, .fifth-mov, .sixth-mov, .access-key, .ticket-grant {
+.background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
+.searching-grant, .fifth-mov, .sixth-mov, .access-key, .ticket-grant {
   background-image: url("../../public/images/auth.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
 
-.strtoupper, .button-design, #start, #how_works, #present, .abstract, .key-word, .form-position, .encrypt-system {
+.strtoupper, .button-design, #start, #how_works, #present, .abstract, .searching-grant, .key-word, .form-position, .encrypt-system {
   text-transform: uppercase; }
 
 .pointer, .button-design, #start, #how_works, #present, #login_submit {
   cursor: pointer; }
 
-.display-table, .abstract, .lets-start, .information, .appear, .logo-align, .encrypt-system, #start, #how_works {
+.display-table, .abstract, .searching-grant, .lets-start, .information, .appear, .logo-align, .encrypt-system, #start, #how_works, .progress {
   display: table-cell;
   vertical-align: middle; }
 
@@ -31,14 +32,15 @@ body {
   color: #FFF !important;
   border-radius: 5px !important; }
 
-.abstract {
+.abstract, .searching-grant {
   font-family: arial;
   font-size: 35px;
   color: #000;
   letter-spacing: 0px;
   padding: 120px; }
 
-.intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth {
+.intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
+.searching-grant {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -85,6 +87,9 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px; }
+
+.progress-size {
+  width: 100%; }
 
 #start, #how_works {
   font-family: arial;
@@ -138,3 +143,30 @@ body {
 #login_submit {
   width: 250px;
   height: 40px; }
+
+#bar {
+  width: 0%;
+  height: 50px; }
+
+.progress {
+  background-color: transparent;
+  width: 100%;
+  height: 50px; }
+
+.progress-0 {
+  width: 0% !important; }
+
+.progress-20 {
+  width: 20% !important; }
+
+.progress-40 {
+  width: 40% !important; }
+
+.progress-60 {
+  width: 60% !important; }
+
+.progress-80 {
+  width: 80% !important; }
+
+.progress-100 {
+  width: 100% !important; }
