--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -74,14 +74,15 @@ body{
   border-radius: 5px !important;
 }
 
-.abstract{
+.abstract, .searching-grant{
   @extend .display-table;
   @extend .strtoupper;
   @include font-pattern(arial, 35px, #000, 0px);
   padding: 120px;
 }
 
-.intro, .starting , .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth{
+.intro, .starting , .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
+.searching-grant{
   @extend .background;
   @include size-pattern(100%, 100vh, #FFF, center);
 }
@@ -118,6 +119,10 @@ body{
 
 .grant-service{
   @include margin(5%, 0px, 0px, 0px);
+}
+
+.progress-size{
+  width: 100%;
 }
 
 #start{
@@ -165,4 +170,38 @@ body{
 #login_submit{
   @extend .pointer;
   @include size(250px, 40px);
+}
+
+#bar{
+  @include size(0%, 50px);
+}
+
+.progress{
+  @extend .display-table;
+  background-color: transparent;
+  @include size(100%, 50px);
+}
+
+.progress-0{
+  width: 0% !important;
+}
+
+.progress-20{
+  width: 20% !important;
+}
+
+.progress-40{
+  width: 40% !important;
+}
+
+.progress-60{
+  width: 60% !important;
+}
+
+.progress-80{
+  width: 80% !important;
+}
+
+.progress-100{
+  width: 100% !important;
 }
