--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,18 @@ body {
   overflow-y: hidden; }
 
 .background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
-.searching-grant, .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted {
+.searching-grant, .simplifying, .kdc-flow, .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view {
   background-image: url("../../public/images/auth.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
 
-.strtoupper, .button-design, #start, #how_works, #present, .abstract, .searching-grant, .key-word, .form-position, .encrypt-system {
+.strtoupper, .button-design, #start, #how_works, #admin_view, #present, .abstract, .searching-grant, .key-word, .form-position, .encrypt-system, .user-view {
   text-transform: uppercase; }
 
-.pointer, .button-design, #start, #how_works, #present, #login_submit {
+.pointer, .button-design, #start, #how_works, #admin_view, #present, #login_submit {
   cursor: pointer; }
 
-.display-table, .abstract, .searching-grant, .lets-start, .information, .appear, .logo-align, .encrypt-system, #start, #how_works, .progress {
+.display-table, .abstract, .searching-grant, .lets-start, .information, .appear, .logo-align, .encrypt-system, .user-view, #start, #how_works, #admin_view, .progress {
   display: table-cell;
   vertical-align: middle; }
 
@@ -26,7 +26,7 @@ body {
 .size-text-space {
   height: 150px; }
 
-.button-design, #start, #how_works, #present {
+.button-design, #start, #how_works, #admin_view, #present {
   border: 2px solid white !important;
   background-color: #000 !important;
   color: #FFF !important;
@@ -40,7 +40,7 @@ body {
   padding: 120px; }
 
 .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
-.searching-grant {
+.searching-grant, .simplifying, .kdc-flow {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -49,7 +49,7 @@ body {
   position: relative;
   cursor: default; }
 
-.fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted {
+.fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -76,13 +76,13 @@ body {
   margin-right: 0vh;
   margin-bottom: 0vh; }
 
-.encrypt-system {
+.encrypt-system, .user-view {
   font-family: arial;
   font-size: 35px;
   color: #000;
   letter-spacing: 0px; }
 
-.grant-service {
+.grant-service, .start-admin-view {
   margin-top: 5%;
   margin-left: 0px;
   margin-right: 0px;
@@ -91,7 +91,7 @@ body {
 .progress-size {
   width: 100%; }
 
-#start, #how_works {
+#start, #how_works, #admin_view {
   font-family: arial;
   font-size: 20px;
   color: #000;
@@ -107,11 +107,11 @@ body {
   width: 200px;
   height: 50px; }
 
-#how_works {
+#how_works, #admin_view {
   width: 400px;
   height: 60px; }
 
-#start:hover, #how_works:hover, #present:hover, #how_works:hover {
+#start:hover, #how_works:hover, #admin_view:hover, #present:hover, #how_works:hover {
   border: 2px solid black !important;
   background-color: #FFF !important;
   color: #000 !important; }
@@ -120,9 +120,13 @@ body {
   width: 500px;
   height: 600px; }
 
-#example {
+#example, #realm {
   width: 800px;
   height: 600px; }
+
+#in_practice {
+  width: 800px;
+  height: 450px; }
 
 #username, #password {
   width: 450px;
@@ -152,21 +156,3 @@ body {
   background-color: transparent;
   width: 100%;
   height: 50px; }
-
-.progress-0 {
-  width: 0% !important; }
-
-.progress-20 {
-  width: 20% !important; }
-
-.progress-40 {
-  width: 40% !important; }
-
-.progress-60 {
-  width: 60% !important; }
-
-.progress-80 {
-  width: 80% !important; }
-
-.progress-100 {
-  width: 100% !important; }
