--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -82,12 +82,12 @@ body{
 }
 
 .intro, .starting , .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
-.searching-grant{
+.searching-grant, .simplifying, .kdc-flow{
   @extend .background;
   @include size-pattern(100%, 100vh, #FFF, center);
 }
 
-.fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted{
+.fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view{
   @extend .background;
   @include size-pattern(100%, 100vh, #FFF, justify);
 }
@@ -111,13 +111,13 @@ body{
   @include margin(2vh, 0vh, 0vh, 0vh);
 }
 
-.encrypt-system{
+.encrypt-system, .user-view{
   @extend .display-table;
   @extend .strtoupper;
   @include font-pattern(arial, 35px, #000, 0px);
 }
 
-.grant-service{
+.grant-service, .start-admin-view{
   @include margin(5%, 0px, 0px, 0px);
 }
 
@@ -138,7 +138,7 @@ body{
   @include size(200px, 50px);
 }
 
-#how_works{
+#how_works, #admin_view{
   @extend #start; 
   @include size(400px, 60px);
 }
@@ -151,8 +151,12 @@ body{
   @include size(500px, 600px);
 }
 
-#example{
+#example, #realm{
   @include size(800px, 600px);
+}
+
+#in_practice{
+  @include size(800px, 450px); 
 }
 
 #username, #password{
@@ -177,31 +181,7 @@ body{
 }
 
 .progress{
-  @extend .display-table;
   background-color: transparent;
+  @extend .display-table;
   @include size(100%, 50px);
-}
-
-.progress-0{
-  width: 0% !important;
-}
-
-.progress-20{
-  width: 20% !important;
-}
-
-.progress-40{
-  width: 40% !important;
-}
-
-.progress-60{
-  width: 60% !important;
-}
-
-.progress-80{
-  width: 80% !important;
-}
-
-.progress-100{
-  width: 100% !important;
 }
