--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   overflow-y: hidden; }
 
 .background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
-.searching-grant, .simplifying, .kdc-flow, .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view {
+.searching-grant, .simplifying, .kdc-flow, .developing, .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view {
   background-image: url("../../public/images/auth.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
@@ -40,7 +40,7 @@ body {
   padding: 120px; }
 
 .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
-.searching-grant, .simplifying, .kdc-flow {
+.searching-grant, .simplifying, .kdc-flow, .developing {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
