--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 body {
   margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  overflow-y: hidden; }
+  padding: 0; }
 
 .background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
-.searching-grant, .simplifying, .kdc-flow, .developing, .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view {
+.searching-grant, .simplifying, .kdc-flow, .krbconf-form, .krbconf, .working, .kerberize,
+.practice, .hash-captched, .project-group, .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view,
+.connect-ad, .kerberize-info, .conclusion, .references {
   background-image: url("../../public/images/auth.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
@@ -16,7 +16,7 @@ body {
 .pointer, .button-design, #start, #how_works, #admin_view, #present, #login_submit {
   cursor: pointer; }
 
-.display-table, .abstract, .searching-grant, .lets-start, .information, .appear, .logo-align, .encrypt-system, .user-view, #start, #how_works, #admin_view, .progress {
+.display-table, .abstract, .searching-grant, .lets-start, .information, .appear, .logo-align, .encrypt-system, .user-view, .progress, #start, #how_works, #admin_view {
   display: table-cell;
   vertical-align: middle; }
 
@@ -40,7 +40,8 @@ body {
   padding: 120px; }
 
 .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
-.searching-grant, .simplifying, .kdc-flow, .developing {
+.searching-grant, .simplifying, .kdc-flow, .krbconf-form, .krbconf, .working, .kerberize,
+.practice, .hash-captched, .project-group {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -49,7 +50,8 @@ body {
   position: relative;
   cursor: default; }
 
-.fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view {
+.fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view,
+.connect-ad, .kerberize-info, .conclusion, .references {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -87,6 +89,11 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px; }
+
+.progress {
+  background-color: transparent;
+  width: 100%;
+  height: 50px; }
 
 .progress-size {
   width: 100%; }
@@ -128,9 +135,13 @@ body {
   width: 800px;
   height: 450px; }
 
-#username, #password {
+.text-input-size {
   width: 450px;
   height: 45px; }
+
+.text-input-size-archive {
+  width: 450px;
+  height: 30px; }
 
 #user_logged {
   font-family: arial;
@@ -138,7 +149,7 @@ body {
   color: #000;
   letter-spacing: 1px; }
 
-#login_text {
+#login_text, #krb5 {
   font-family: arial;
   font-size: 38px;
   color: #000;
@@ -150,9 +161,4 @@ body {
 
 #bar {
   width: 0%;
-  height: 50px; }
-
-.progress {
-  background-color: transparent;
-  width: 100%;
   height: 50px; }
