--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,11 @@
 body {
   margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  overflow-y: hidden; }
+  padding: 0; }
 
 .background, .intro, .starting, .first-mov, .second-mov, .third-mov, .fourth-mov, .login-form, .after-auth,
 .searching-grant, .simplifying, .kdc-flow, .krbconf-form, .krbconf, .working, .kerberize,
 .practice, .hash-captched, .project-group, .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view,
-.connect-ad, .kerberize-info, .conclusion, .references {
+.connect-ad, .kerberize-info, .conclusion, .references, .references-continuation {
   background-image: url("../../public/images/auth.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
@@ -53,7 +51,7 @@ body {
   cursor: default; }
 
 .fifth-mov, .sixth-mov, .access-key, .ticket-grant, .granted, .success-or-fail, .final-user-view,
-.connect-ad, .kerberize-info, .conclusion, .references {
+.connect-ad, .kerberize-info, .conclusion, .references, .references-continuation {
   width: 100%;
   height: 100vh;
   background-color: #FFF;
@@ -105,6 +103,13 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px; }
+
+.link {
+  color: #000; }
+
+.link:hover {
+  text-decoration: none;
+  color: #000; }
 
 #start, #how_works, #admin_view {
   font-family: arial;
