--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,12 @@ body {
   width: 450px;
   height: 30px; }
 
+.consideration {
+  font-family: arial;
+  font-size: 25px;
+  color: #000;
+  letter-spacing: 1px; }
+
 #user_logged {
   font-family: arial;
   font-size: 25px;
